{
    "name": "InpActionMap",
    "maps": [
        {
            "name": "InGameAP",
            "id": "7d98ecf6-cf1c-4a4f-8f18-7d9374c0337d",
            "actions": [
                {
                    "name": "select",
                    "type": "Button",
                    "id": "3f5fa191-29b2-4e66-9a82-b8b68b1c02ed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "selectPos",
                    "type": "Value",
                    "id": "3403e26e-727a-45ed-bc11-6e5f33452e29",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "cameraMove",
                    "type": "Value",
                    "id": "a8fbf3da-d74e-4f70-87cc-e490cdc2b116",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "cameraRotate",
                    "type": "Value",
                    "id": "ec6ee7cd-1679-4c8b-b990-6fd608d5d7be",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "cameraRotateButton",
                    "type": "Button",
                    "id": "1bf58611-3d28-4d68-9c0c-4a4d2517cfd7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "cameraZoom",
                    "type": "Value",
                    "id": "bc14150d-8ac5-4796-86c4-9b7ef239775b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "cameraDrag",
                    "type": "Button",
                    "id": "b18565f3-b7f8-4e53-9b04-545e4297bef3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "cameraDragPos",
                    "type": "Value",
                    "id": "1bf7351c-6a91-42c6-9c63-4f8547cd423d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a72fabf9-14c5-4730-8466-aa4474a65f42",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "kbm",
                    "action": "select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80441811-6a9f-49b7-824f-4708f14a6bde",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "kbm",
                    "action": "selectPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "9bb1c8c1-d25e-4908-961a-b71176c27e13",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e7446173-7398-41f8-8e6d-42f311c4cb4f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "5a9b04f1-5000-48af-99d2-4473af01bb6d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "75b4205a-12f8-4f2a-899b-43c23764d224",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f1b0cf4e-6bf2-44ed-b4db-20891fc1657d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f2f42925-a593-42f1-a115-d6529cb7475a",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "kbm",
                    "action": "cameraRotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "14edfc02-da9a-451e-b58a-e0a5b23f8384",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraZoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "03fd862b-ecd9-4183-b23c-eb186e44fc7e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraDrag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fea93f05-66c4-40cc-9d77-135b98700894",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "kbm",
                    "action": "cameraRotateButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c9146575-6927-4be4-a108-40ec08cb8f4d",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraRotateButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "368965e5-4e98-4eac-8217-1f51ae97f812",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraDragPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "InGameAPkbm",
            "id": "798a9222-980f-4c30-b348-36e51a13c6c5",
            "actions": [
                {
                    "name": "select",
                    "type": "Button",
                    "id": "6dda2ff2-b1d2-42ca-a85d-80d65b08f0a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "selectPos",
                    "type": "Value",
                    "id": "810d1b9e-1e30-4a2b-874b-541a29370dd3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "cameraMove",
                    "type": "Value",
                    "id": "38896748-21ba-4966-8408-3f0bfedd3ee5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "cameraRotate",
                    "type": "Value",
                    "id": "3936f655-eedc-4897-a5d1-93b316c49d90",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "cameraRotateButton",
                    "type": "Button",
                    "id": "3e34502c-a523-4086-99c7-d3a3b139c6e3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "cameraZoom",
                    "type": "Value",
                    "id": "396f492d-c5eb-4eff-bb23-c91fc0ea015f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "cameraDrag",
                    "type": "Button",
                    "id": "3ec9c161-018e-4759-a3c1-f6775ce47818",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "cameraDragPos",
                    "type": "Value",
                    "id": "44b5df0b-1a14-4808-a13a-b0809c7fa169",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "actSelect",
                    "type": "Button",
                    "id": "40d36a12-ae33-4648-a167-69b1772ba2f5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "actSelectPos",
                    "type": "Value",
                    "id": "b497e6ce-7a0f-4dc9-b955-2738db657f7d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f410a5dd-346f-43cb-bce4-9c33a6c2bd0d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "kbm",
                    "action": "select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e981d16-b014-48dd-9c80-969eb907dccb",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "kbm",
                    "action": "selectPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "954f78b3-06f7-4f50-8283-4dd5b337edc3",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "eb703aab-d6bd-4384-b98b-386edcb5977d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3fbd0502-aa63-44ab-a3db-3caeb014cfb3",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "515e4f6c-0b8b-4fb4-bcdc-a594860f1ad6",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "787ac16d-f570-4903-8368-aa53d637a24c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c7c4c550-88b6-4d78-9c36-8805bf268e98",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "kbm",
                    "action": "cameraRotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bda2bd88-0a62-4f80-9d80-b66af15fc32f",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraZoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca3fd06e-8191-4984-8174-83bf88f1aff9",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraDrag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca4a58e3-64ea-47ce-b091-df9590106b23",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraRotateButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b4cecd2-e511-4cd4-b679-936d63ec02e8",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraRotateButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8afc732c-ea28-4dc2-8112-32392ebd69e7",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraRotateButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ac6508f-6c3e-4e6a-b1e7-ce51537859ee",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraDragPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "49ff96ee-cbcf-4976-ba65-87e010d39159",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "actSelectPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00478a48-ef75-45e1-930c-452d389b98b4",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "actSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "kbm",
            "bindingGroup": "kbm",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}